--- a/browser/js/playlist/templates/playlist.html
+++ b/browser/js/playlist/templates/playlist.html
@@ -6,7 +6,7 @@
         <th></th>
         <th>Name</th>
         <th>Artists</th>
-        <th>Genres</th>
+        <th>Genre</th>
       </tr>
     </thead>
     <tbody>
@@ -18,7 +18,7 @@
         </td>
         <td>{{ song.name }}</td>
         <td><span ng-repeat="artist in song.artists">{{ artist.name }}{{ $last ? '' : ', ' }}</span></td>
-        <td>{{ song.genres.join(', ') }}</td>
+        <td>{{ song.genre }}</td>
       </tr>
     </tbody>
   </table>
